<resources>
    <string name="app_name">Card Clone Tool</string>
    <string name="app_name_cn">卡片复制工具</string>
    <string name="error">无法识别</string>
    <string name="exception">发生错误</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>

    <string name="nfc_unopened_title">NFC功能未开启</string>
    <string name="nfc_unopened_message">本软件需要使用NFC功能，请开启后重试</string>
    <string name="nfc_unavailable_title">此设备不支持NFC功能</string>
    <string name="nfc_unavailable_message">本软件需要依赖NFC功能才能工作</string>

    <string name="tip">请将校园一卡通靠近设备NFC模块\n以记录卡片ID</string>
    <string name="uid">卡片ID</string>
    <string name="student_id">&#8194;&#8194;学号</string>
    <string name="input_tip">请确认学号信息无误</string>
    <string name="button">确认数据</string>
    <string name="write_msg1">确认将学号</string>
    <string name="write_msg2">和记录的卡片ID写入复制卡\n\n该操作无法撤销</string>
    <string name="second">请将复制卡靠近NFC模块</string>
    <string name="put_another_card">现在请将需要写入数据的CUID卡片靠近NFC模块</string>

    <string name="tag_checked">读取到卡片</string>
    <string name="write_alert">请确认您使用的是CUID卡片\n非CUID卡片写入可能会发生不可逆转的未知错误\n在出现操作完成的提示之前请勿将卡片移开NFC模块\n请谨慎操作</string>
    <string name="write_confirm">写入数据</string>
    <string name="uid_error">卡片UID写入失败</string>
    <string name="success">操作成功</string>
</resources>
